Fix header alignment on Firefox

--- a/css/app.css
+++ b/css/app.css
@@ -32,6 +32,11 @@ a {
     z-index: 1;
 }
 
+.header-logo-container {
+    display: flex;
+    justify-content: center;
+}
+
 .footer {
     position: fixed;
     bottom: 0px;
